--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Add NuGet source
+      run: |
+        nuget sources add -name "GitHub Packages (MTConnect)" -source "https://nuget.pkg.github.com/mtconnect/index.json" -username ${{ github.actor }} -password ${{ secrets.GITHUB_TOKEN }}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
