--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,7 @@ updates:
           username: "${{ github.repository_owner }}"
           password: "${{ secrets.GITHUB_TOKEN }}"
     open-pull-requests-limit: 10
+    # Define the packages to update
+    update:
+      - package-regex: ".*"
+        include-prereleases: true
