--- a/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
+++ b/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MTConnect Transpiler Sink for C#</Title>
-    <Version>0.0.9</Version>
+    <Version>0.0.10-beta</Version>
     <Authors>mtconnect, tbm0115</Authors>
     <Company>MTConnect Institute; TAMS;</Company>
     <Description>An implementation of `ITranspilerSink` from the `MtconnectTranspiler` library. This libary makes it possible to transpile the MTConnect Standard SysML model into C# code.</Description>
