--- a/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
+++ b/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
@@ -4,12 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MTConnect Transpiler Sink for C#</Title>
-    <Version>0.0.12-beta</Version>
+    <Version>0.0.12</Version>
     <Authors>mtconnect, tbm0115</Authors>
     <Company>MTConnect Institute; TAMS;</Company>
     <Description>An implementation of `ITranspilerSink` from the `MtconnectTranspiler` library. This libary makes it possible to transpile the MTConnect Standard SysML model into C# code.</Description>
     <RepositoryType>git</RepositoryType>
     <PackageTags>MTConnect;Transpiler;CI;C#;</PackageTags>
+    <PackageProjectUrl>https://github.com/mtconnect/MtconnectTranspiler.Sinks.CSharp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mtconnect/MtconnectTranspiler.Sinks.CSharp</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
