--- a/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
+++ b/MtconnectTranspiler.Sinks.CSharp/MtconnectTranspiler.Sinks.CSharp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MTConnect Transpiler Sink for C#</Title>
-    <Version>1.0.13</Version>
+    <Version>1.0.14-prerelease</Version>
     <Authors>mtconnect, tbm0115</Authors>
     <Company>MTConnect Institute; TAMS;</Company>
     <Description>An implementation of `ITranspilerSink` from the `MtconnectTranspiler` library. This libary makes it possible to transpile the MTConnect Standard SysML model into C# code.</Description>
@@ -41,9 +41,9 @@
 
   <ItemGroup>
     <PackageReference Include="CaseExtensions" Version="1.1.0" />
-    <PackageReference Include="MtconnectTranspiler" Version="1.0.7" />
-    <PackageReference Include="MtconnectTranspiler.Sinks.ScribanTemplates" Version="1.0.14" />
-    <PackageReference Include="Scriban" Version="5.7.0" />
+    <PackageReference Include="MtconnectTranspiler" Version="1.0.8-prerelease" />
+    <PackageReference Include="MtconnectTranspiler.Sinks.ScribanTemplates" Version="1.0.15-prerelease" />
+    <PackageReference Include="Scriban" Version="5.9.0" />
   </ItemGroup>
 
 </Project>
