--- a/MtconnectTranspiler.Sinks.CSharp.Example/Properties/launchSettings.json
+++ b/MtconnectTranspiler.Sinks.CSharp.Example/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MtconnectTranspiler.Sinks.CSharp.Example": {
       "commandName": "Project",
-      "commandLineArgs": "\"%UserProfile%\\Desktop\\MTConnect Transpiled\\CSharp\""
+      "commandLineArgs": "\"%UserProfile%\\Desktop\\MTConnect Transpiled\\CSharp\" \"C:\\Users\\LightWorks\\Source\\Repos\\mtconnect_sysml_model_dev\\MTConnect SysML Model.xml\""
     }
   }
 }
