--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,7 @@ PublishScripts/
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # except in Models
-!**/[Mm]odels/[Ppackages/
+!**/[Mm]odels/[Ppackages/*
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/[Pp]ackages/repositories.config
 # NuGet v3's project.json files produces more ignorable files
