--- a/MtconnectTranspiler.Sinks.CSharp.Example/appsettings.json
+++ b/MtconnectTranspiler.Sinks.CSharp.Example/appsettings.json
@@ -6,6 +6,6 @@
       "Microsoft": "Information"
     }
   },
-  "OutputPath": "C:\\Users\\LightWorks\\Source\\Repos\\MtconnectTranspiler.Sinks.CSharp\\MtconnectTranspiler.Sinks.CSharp\\Models",
-  "ModelPath": "\\\\lightworksnas\\work\\True Analytics Solutions\\MTConnect Standard\\2.3.0\\MTConnect SysML Model.xml"
+  "OutputPath": "",
+  "ModelPath": ""
 }
